--- a/Ejercicio2/src/index_theme1.html
+++ b/Ejercicio2/src/index_theme1.html
@@ -3,20 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ejercicio 2</title>
-  <link rel="stylesheet" href="styles.scss">
+  <title>Ejercicio 2 - Theme 1</title>
+  <link rel="stylesheet" href="styles1.scss">
 </head>
 <body>
   <section class="themes-container">
-    <article id="theme1" class="theme-article">
-      <div class="theme-box base-box">Base</div>
-      <div class="theme-box important-box">Important</div>
-      <div class="theme-box warning-box">Warning</div>
-      <p class="theme-text">Principal font</p>
-      <p class="theme-text secundary-text">Secundary font</p>
-      <div class="theme-box shadow-box">Box with shadow</div>
-    </article>
-    <article id="theme2" class="theme-article">
+    <article class="theme-article">
       <div class="theme-box base-box">Base</div>
       <div class="theme-box important-box">Important</div>
       <div class="theme-box warning-box">Warning</div>
